# kv4p-robot36-apk-cli

./: .gitignore
.trae/documents/: Perbaiki Error Kompilasi di RadioAudioService dan Pastikan Visualizer Berfungsi.md  Perbaiki Setting UI Resample SSTV (Tambah ID yang Hilang).md  Perbaiki Visualizer untuk SSTV dari Radio.md  Resample Audio RX 48k → 11025 Hz untuk SSTV Robot36.md
KV4PHT/.trae/documents/: Add SSTV Image Picker and Transmit Button in MainActivity.md  Complete Native Robot36 RX and UI Integration.md  Fix NDK Build_ Link jnigraphics, Include math.h, Verify JNI Bitmap Handling.md  Fix SSTV RX_ Native Robot36 Decoder with Progressive UI.md  Implement Native Robot36 RX Decoder, JNI Feed_Resampler, and Progressive UI.md  Integrate Native Robot36 Decoder and Progressive RX UI.md  Native Robot36 RX_ Mic_Radio Decode and UI like Robot36 App.md  Simplify SSTV Export_ Force 11025 Hz, Keep 48 kHz for PTT.md
KV4PHT/app/: build.gradle
KV4PHT/app/src/main/: AndroidManifest.xml
KV4PHT/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  robot36.c
KV4PHT/app/src/main/cpp/robot36_decode/: Makefile  librobot36.dylib  robot36_decode.c  robot36_decode.h
KV4PHT/app/src/main/res/drawable/: baseline_close_24.xml  baseline_pause_24.xml  baseline_play_arrow_24.xml  baseline_save_alt_24.xml  (+4 more)
KV4PHT/usbSerialForAndroid/: build.gradle
python-cli/: README.md  afsk1200.py  aprs_ax25.py  audio.py  cli.py  gen_robot36_wav.py  gui.py  opus_codec.py  protocol.py  radio_service.py  requirements.txt  resample.py  robot36_encoder.py  sstv_detect.py  sstv_rx.py  sstv_tx.py  wav_tx.py
(+48 files in other folders)
